--- a/library-management-system-main/docker-compose.yml
+++ b/library-management-system-main/docker-compose.yml
@@ -18,7 +18,7 @@ services:
       SPRING_PROFILES_ACTIVE: prod
       SPRING_DATASOURCE_URL: jdbc:mysql://db:3306/library_dev
       SPRING_DATASOURCE_USERNAME: root
-      SPRING_DATASOURCE_PASSWORD: password
+      SPRING_DATASOURCE_PASSWORD: root
     ports:
       - "8080:8080"
     volumes:
